added optional htpasswd protecion

--- a/nginx-mediawiki.conf
+++ b/nginx-mediawiki.conf
@@ -9,10 +9,16 @@ server {
  
         location / {
                 try_files $uri $uri/ @rewrite;
+                
+                #auth_basic "Restricted";
+                #auth_basic_user_file /etc/nginx/htpasswd;
         }
  
         location @rewrite {
                 rewrite ^/(.*)$ /index.php?title=$1&$args;
+                
+                #auth_basic "Restricted";
+                #auth_basic_user_file /etc/nginx/htpasswd;
         }
  
         location ^~ /maintenance/ {
@@ -26,26 +32,41 @@ server {
                 fastcgi_index index.php;
                 fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
                 include fastcgi_params;
+                
+                #auth_basic "Restricted";
+                #auth_basic_user_file /etc/nginx/htpasswd;
         }
 
         location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
                 try_files $uri /index.php;
                 expires max;
                 log_not_found off;
+                
+                #auth_basic "Restricted";
+                #auth_basic_user_file /etc/nginx/htpasswd;
         }
  
         location = /_.gif {
                 expires max;
                 empty_gif;
+                
+                #auth_basic "Restricted";
+                #auth_basic_user_file /etc/nginx/htpasswd;
         }
  
         location ^~ /cache/ {
                 deny all;
+                
+                #auth_basic "Restricted";
+                #auth_basic_user_file /etc/nginx/htpasswd;
         }
  
         location /dumps {
                 root /var/www/mediawiki/local;
                 autoindex on;
+                
+                #auth_basic "Restricted";
+                #auth_basic_user_file /etc/nginx/htpasswd;
         }
 }
 
@@ -67,10 +88,16 @@ server {
  
         location / {
                 try_files $uri $uri/ @rewrite;
+                
+                #auth_basic "Restricted";
+                #auth_basic_user_file /etc/nginx/htpasswd;
         }
  
         location @rewrite {
                 rewrite ^/(.*)$ /index.php?title=$1&$args;
+                
+                #auth_basic "Restricted";
+                #auth_basic_user_file /etc/nginx/htpasswd;
         }
  
         location ^~ /maintenance/ {
@@ -84,25 +111,40 @@ server {
                 fastcgi_index index.php;
                 fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
                 include fastcgi_params;
+                
+                #auth_basic "Restricted";
+                #auth_basic_user_file /etc/nginx/htpasswd;
         }
 
         location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
                 try_files $uri /index.php;
                 expires max;
                 log_not_found off;
+
+                #auth_basic "Restricted";
+                #auth_basic_user_file /etc/nginx/htpasswd;
         }
  
         location = /_.gif {
                 expires max;
                 empty_gif;
+                
+                #auth_basic "Restricted";
+                #auth_basic_user_file /etc/nginx/htpasswd;
         }
  
         location ^~ /cache/ {
                 deny all;
+                
+                #auth_basic "Restricted";
+                #auth_basic_user_file /etc/nginx/htpasswd;
         }
  
         location /dumps {
                 root /var/www/mediawiki/local;
                 autoindex on;
+
+                #auth_basic "Restricted";
+                #auth_basic_user_file /etc/nginx/htpasswd;
         }
 }
