--- a/nginx-mediawiki.conf
+++ b/nginx-mediawiki.conf
@@ -1,82 +1,10 @@
 server {
         listen 80;
-        
-        root /usr/share/nginx/html;
-        index index.php index.html index.htm;
-  
-        client_max_body_size 5m;
-        client_body_timeout 60;
- 
-        location / {
-                try_files $uri $uri/ @rewrite;
-                
-                #auth_basic "Restricted";
-                #auth_basic_user_file /etc/nginx/htpasswd;
-        }
- 
-        location @rewrite {
-                rewrite ^/(.*)$ /index.php?title=$1&$args;
-                
-                #auth_basic "Restricted";
-                #auth_basic_user_file /etc/nginx/htpasswd;
-        }
- 
-        location ^~ /maintenance/ {
-                return 403;
-        }
- 
-        location ~ \.php$ {
-                try_files $uri =404;
-                fastcgi_split_path_info ^(.+\.php)(/.+)$;
-                fastcgi_pass unix:/var/run/php5-fpm.sock;
-                fastcgi_index index.php;
-                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-                include fastcgi_params;
-                
-                #auth_basic "Restricted";
-                #auth_basic_user_file /etc/nginx/htpasswd;
-        }
-
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
-                try_files $uri /index.php;
-                expires max;
-                log_not_found off;
-                
-                #auth_basic "Restricted";
-                #auth_basic_user_file /etc/nginx/htpasswd;
-        }
- 
-        location = /_.gif {
-                expires max;
-                empty_gif;
-                
-                #auth_basic "Restricted";
-                #auth_basic_user_file /etc/nginx/htpasswd;
-        }
- 
-        location ^~ /cache/ {
-                deny all;
-                
-                #auth_basic "Restricted";
-                #auth_basic_user_file /etc/nginx/htpasswd;
-        }
- 
-        location /dumps {
-                root /var/www/mediawiki/local;
-                autoindex on;
-                
-                #auth_basic "Restricted";
-                #auth_basic_user_file /etc/nginx/htpasswd;
-        }
-}
-
-server {
-        listen 443 ssl;
+        listen 443 default_server ssl;
 
         root /usr/share/nginx/html;
         index index.php index.html index.htm;
 
-        ssl on;
         ssl_certificate external/cert.pem;
         ssl_certificate_key external/key.pem;
 
